     - In segments glyph, fixed the display of inserted bases such that they will not bleed into a
       preceding deletion.
     - In segments glyph, fixed the mismatch color highlighting when the alignment is to the negative
       strand.
     - In segments glyph, fixed the default colors for mismatch, insertion and deletion.
     - In gene glyph, fixed occasional linking of two neighboring transcripts.
     
2.16
     - Distinguish between "chromosome" and "global" autoscaling in the xyplot and density glyphs.
       Global autoscaling only works when underlying database is bigwig.
     - Regularized options which select glyph subtypes with an option named "glyph_subtype".

2.15
     - Fixed documentation bug: sort_order options to sort by feature length should be
       "longest" and "shortest" rather than "longer and "shorter".
     - Improved layout algorithm, achieving speedup of ~4x on busy tracks.
     - Fixed font color problems when displaying multiple alignments at DNA level in
       the segments glyph.
     - Fixed problem of DNA alignment indels disappearing from view when they span entire region.
     - Fixed problem of mismatch and indel colors leaking off ends of feature arrows.

2.14
     - Fixes to the way that "fast bump" works so that tracks never fast bump.
       This fixes problems when using groups to simulate subtracks, and the
       groups are of different heights.
     - The group glyph will now add the group labels to the list of track keys
       stored in the panel and retrieved from the call to $panel->key_boxes().

2.13
     - Changed default namespace for callbacks to make them portable across freeze/thaw
       cycles.

2.12 Tue Aug 31 10:42:06 EDT 2010
     - Created a read_pairs glyph that contains the settings most often used for SAM paired end reads/mate pairs;
       this fixes the mate-pairs overlap bug.
     - xyplot glyph now obeys "flip" setting.

2.11 Tue Jun 29 15:37:03 EDT 2010